# python-labs

./: .gitignore  Makefile  README.md
chat-models/: main.ipynb  pyproject.toml
chat_models_and_prompts/: main.ipynb  pyproject.toml
comfyui_connect/: basic_api_example.ipynb  comfyui_ws_prompt.ipynb  default-test.json  image2image.ipynb  main.ipynb  pyproject.toml  websockets_api_example.ipynb
comfyui_connect/comfyui_wf_api/: base_api.json  image2image.json
comfyui_connect/utils/: __init__.py
embeddings/: main.ipynb  pyproject.toml
examples/ai_translate/: README.md
examples/chat-models/: pyproject.toml
examples/chat_models_and_prompts/: main.ipynb  pyproject.toml
examples/comfyui_connect/: pyproject.toml  test_connect.py  websockets_api_example.ipynb
examples/comfyui_connect/utils/: load_env.py  load_json.py
examples/embeddings/: main.ipynb  pyproject.toml
examples/rag/: main.ipynb
examples/rag/db/: chroma.sqlite3
examples/sd-xl-run/: README.md  pyproject.toml
examples/voice_translator/: pyproject.toml
pypi/marker/: main.py  pyproject.toml
qwen3-mt/: main.py  pyproject.toml
rag/: pyproject.toml
voice_translator/: main.ipynb
