[project]
name = "comfyui-connect"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris",email = "chris@topiaco.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
