[project]
name = "embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris",email = "chris@topiaco.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-community (>=0.3.29,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
