[project]
name = "qwen3-mt"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris",email = "chris@topiaco.com"}
]
requires-python = ">=3.10"
dependencies = [
    "gradio (>=5.47.1,<6.0.0)",
    "openai (>=1.109.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
