[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris",email = "chris@topiaco.com"}
]
readme = "README.md"
requires-python = ">=3.10 ,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "ollama (>=0.5.4,<0.6.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
